I added the header and nav tag to index.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,6 +18,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link rel="stylesheet" href="./font awesome/css/all.min.css"/>
     </head>
     <body dir="rtl">
-        sdf
+        <header>
+            <nav class="navbar navbar-expand-sm">
+                
+            </nav>
+        </header>
     </body>
 </html>
