I edited the tags of customers section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -203,25 +203,25 @@
         
         <!-- customers -->
         <section class="container p-4 my-3 d-flex justify-content-around">
-            <div class="p-3">
+            <figure class="p-3">
                 <span class="fab fa-html5 fa-4x"></span>
-            </div>
+            </figure>
 
-            <div class="p-3">
+            <figure class="p-3">
                 <span class="fab fa-html5 fa-4x"></span>
-            </div>
+            </figure>
 
-            <div class="p-3">
+            <figure class="p-3">
                 <span class="fab fa-html5 fa-4x"></span>
-            </div>
+            </figure>
 
-            <div class="p-3">
+            <figure class="p-3">
                 <span class="fab fa-html5 fa-4x"></span>
-            </div>
+            </figure>
 
-            <div class="p-3">
+            <figure class="p-3">
                 <span class="fab fa-html5 fa-4x"></span>
-            </div>
+            </figure>
         </section>
         <!-- customers -->
         
