I edited the navigation title

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,9 +24,9 @@
                 </div>
                 
                 <!-- title -->
-                <div class="me-3 ms-auto">
-                    <h1 class="lead navbar-text text-white">Website Title</h1>
-                </div>
+                <h1 class="ms-auto">
+                    <span class="navbar-text lead pe-2 text-white">Website Title</span>
+                </h1>
                 
                 <!-- bar button -->
                 <button class="btn navbar-toggler" data-bs-dismiss="" data-bs-toggle="collapse" data-bs-target="#topMenu">
